// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`__getDrawCalls > should have a draw call when clearRect is called 1`] = `
[
  {
    "props": {
      "height": 4,
      "width": 3,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "clearRect",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when drawImage is called 1`] = `
[
  {
    "props": {
      "dHeight": 300,
      "dWidth": 400,
      "dx": 0,
      "dy": 0,
      "img": <img
        height="300"
        src="https://placekitten.com/400/300"
        width="400"
      />,
      "sHeight": 300,
      "sWidth": 400,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when drawImage is called with size parameters 1`] = `
[
  {
    "props": {
      "dHeight": 300,
      "dWidth": 400,
      "dx": 0,
      "dy": 0,
      "img": <img
        height="300"
        src="https://placekitten.com/400/300"
        width="400"
      />,
      "sHeight": 300,
      "sWidth": 400,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when drawImage is called with source parameters 1`] = `
[
  {
    "props": {
      "dHeight": 200,
      "dWidth": 200,
      "dx": 0,
      "dy": 0,
      "img": <img
        height="300"
        src="https://placekitten.com/400/300"
        width="400"
      />,
      "sHeight": 100,
      "sWidth": 100,
      "sx": 0,
      "sy": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "drawImage",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when fill() is called 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 10,
            "startAngle": 0,
            "x": 100,
            "y": 101,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "arc",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when fill() is called with a fillRule 1`] = `
[
  {
    "props": {
      "fillRule": "evenodd",
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 10,
            "startAngle": 0,
            "x": 100,
            "y": 101,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "arc",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when fillRect is called 1`] = `
[
  {
    "props": {
      "height": 4,
      "width": 3,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillRect",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when fillRule is valid 1`] = `
[
  {
    "props": {
      "fillRule": "evenodd",
      "path": [
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 10,
            "startAngle": 0,
            "x": 100,
            "y": 101,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "arc",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when fillText has valid maxWidth 1`] = `
[
  {
    "props": {
      "maxWidth": 100,
      "text": "hello world",
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillText",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when fillText is valid 1`] = `
[
  {
    "props": {
      "maxWidth": null,
      "text": "hello world",
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fillText",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when stroke is called 1`] = `
[
  {
    "props": {
      "path": [
        {
          "props": {},
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "beginPath",
        },
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 10,
            "startAngle": 0,
            "x": 100,
            "y": 101,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "arc",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "stroke",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when stroke is called with a path 1`] = `
[
  {
    "props": {
      "path": [
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 10,
            "startAngle": 0,
            "x": 100,
            "y": 101,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "arc",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "stroke",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when strokeRect is called 1`] = `
[
  {
    "props": {
      "height": 4,
      "width": 3,
      "x": 1,
      "y": 2,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "strokeRect",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when strokeText has valid maxWidth 1`] = `
[
  {
    "props": {
      "maxWidth": 100,
      "text": "hello world",
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "strokeText",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when strokeText is valid 1`] = `
[
  {
    "props": {
      "maxWidth": null,
      "text": "hello world",
      "x": 0,
      "y": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "strokeText",
  },
]
`;

exports[`__getDrawCalls > should have a draw call when using a path 1`] = `
[
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "anticlockwise": false,
            "endAngle": 6.283185307179586,
            "radius": 10,
            "startAngle": 0,
            "x": 100,
            "y": 101,
          },
          "transform": [
            1,
            0,
            0,
            1,
            0,
            0,
          ],
          "type": "arc",
        },
      ],
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "fill",
  },
]
`;

exports[`__getDrawCalls > should not have a draw call when clearRect is passed bad values 1`] = `[]`;

exports[`__getDrawCalls > should not have a draw call when drawImage is called with non-finite numbers 1`] = `[]`;

exports[`__getDrawCalls > should not have a draw call when drawImage is called with non-finite numbers and size parameters 1`] = `[]`;

exports[`__getDrawCalls > should not have a draw call when drawImage is called with non-finite numbers and source parameters 1`] = `[]`;

exports[`__getDrawCalls > should not have a draw call when fillRect is passed bad values 1`] = `[]`;

exports[`__getDrawCalls > should not have a draw call when fillText is not valid (NaN maxWidth) 1`] = `[]`;

exports[`__getDrawCalls > should not have a draw call when fillText is not valid (NaN y) 1`] = `[]`;

exports[`__getDrawCalls > should not have a draw call when strokeRect is passed bad values 1`] = `[]`;

exports[`__getDrawCalls > should not have a draw call when strokeText is not valid (NaN maxWidth) 1`] = `[]`;

exports[`__getDrawCalls > should not have a draw call when strokeText is not valid (NaN y) 1`] = `[]`;
